--- a/css/selfStyle.css
+++ b/css/selfStyle.css
@@ -3,3 +3,13 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+#container {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nav-item {
+    cursor: pointer;
+}
