--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,10 @@
     width: 80%;
     margin: 0 auto;
 }
+
+/* In Progress */
+.progress {
+    margin: 0 auto;
+    width: 80%;
+    margin-top: 20px;
+}
