--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,17 @@
 }
 
 #container {
+    width: 84rem;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .coinCard {
-    width: 22rem;
+    width: 20rem;
+    /* width: 22rem; */
     /* height: 18rem; */
-    margin: 10px;
 }
 
 .card-header > p {
